try to fix spacing for nav links

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,6 @@ nav ul { list-style: none; margin: 0; padding: 0;  padding-left: 60%; }
 nav ul li { float: left; }
 
 nav ul li a {
-    display: inline-block;
     color: #333;
     padding: 10px 20px;
     text-decoration: none;
